<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/left_padding"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
        <!-- Price field -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/left_padding">
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
            <!-- Currency for products -->
            <TextView
                android:id="@+id/label_product_currency"
                android:text="@string/currency_product"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Order category -->
    <LinearLayout
        android:id="@+id/container_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_order"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/left_padding">

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for products -->
            <TextView
                android:id="@+id/label_book_units"
                android:text="@string/unit_product"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_width"
            android:layout_weight="2"
            android:paddingLeft="@dimen/left_padding"
            android:orientation="vertical">

            <!-- Supplier's name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Phone field -->
            <EditText
                android:id="@+id/edit_supplier_phone_number"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>